feat: add authentification api
