# database/postgres/schema.ts
@@ -6,6 +6,7 @@ export const users = pgTable('users', {
     firstName: varchar('firstName', { length: 255 }),
     lastName: varchar('lastName', { length: 255 }),
     email: varchar('email', { length: 255 }).unique(),
+    password: varchar('password', { length: 255 }).notNull(), // Hashed password
     paymentMethod: text('paymentMethod'), // Storing JSON string
     status: varchar('status', { length: 50 }).$type<t_UserStatus>().notNull().default('OK'),
     createdAt: timestamp('createdAt').defaultNow(),
